# Forge

./: .gitignore  README.md  pyproject.toml
forge/: __init__.py  __main__.py  config.py
forge/agent/: __init__.py  loop.py  memory.py  router.py
forge/gui/: __init__.py  server.py
forge/models/: __init__.py  cache.py  client.py
forge/tools/: filesystem.py  git.py  plugins.py  search.py  shell.py  web.py
forge/ui/: __init__.py  display.py  logo.py  prompts.py
forge/utils/: ast_parser.py  tokens.py
tests/: test_gui_server.py  test_loop_helpers.py  test_main_helpers.py  test_models_client.py  test_router.py
